# genesis-mesh

./: .gitignore  hierarchial_teams.py  pyproject.toml  reflection.py  requirements.txt  ruff_defaults.toml  simple_agent.py  supervisor.py
.devcontainer/: Dockerfile  devcontainer.json
mesh/: __main__.py
mesh/models/: __init__.py
mesh/tools/: search_tool.py  web_crawler.py  web_crawler1.py  web_scraper.py
mesh/utils/: playwright_scraper.py  unstructured_parser.py
src/genesis_mesh/: __main__.py
src/genesis_mesh/agents/blogger/: __init__.py
src/genesis_mesh/agents/blogger/graph/: blog_builder.py  section_builder.py
src/genesis_mesh/agents/blogger/prompts/: __init__.py
src/genesis_mesh/agents/blogger/schemas/: __init__.py
src/genesis_mesh/agents/blogger/utils/: __init__.py
src/genesis_mesh/configs/agents/blogger/: __init__.py
src/genesis_mesh/configs/llm/: __init__.py
src/genesis_mesh/configs/tools/: searxng.py
src/genesis_mesh/models/: __init__.py
src/genesis_mesh/models/tools/crawler/: __init__.py
src/genesis_mesh/models/tools/search_engine/: __init__.py
src/genesis_mesh/tools/crawler/: __init__.py
src/genesis_mesh/tools/search_engine/: __init__.py
src/genesis_mesh/utils/: __init__.py
