[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genesis-mesh"
dynamic = ["version"]
description = ""
readme = "Readme.md"
requires-python = ">=3.12.0,<3.13.0"
keywords = []
authors = [{name = "Akhil K"}, {name = "Prateek J"}]
dependencies = [
    "fastapi[standard]==0.115.7",
    "websockets==14.2",
    "pydantic-settings==2.7.1",
    "langchain==0.3.15",
    "langgraph==0.2.67",
    "langchain-openai==0.3.2",
    "crawl4ai==0.4.247",
    "aiohttp[speedups]==3.11.11"
]

[tool.hatch.version]
path = "src/genesis_mesh/__about__.py"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.types]
extra-dependencies = ["mypy==1.13.0"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/genesis_mesh}"

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff_defaults.toml"

[tool.ruff]
extend = "ruff_defaults.toml"
